# bithumb-festival-script

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: bitthumb-run.ps1  bitthumb-run.sh
src/bitthumb_cli/: auth.py  cli.py  config.py  orders.py  types.py
tests/: test_auth.py  test_cli.py  test_config.py  test_orders.py
